<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_signup_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.formation.userapplication.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:scaleType="centerInside" />

        <EditText
            android:id="@+id/et_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_signup_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_check_hint"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_signup_firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/first_name_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_signup_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/last_name_hint"
                android:inputType="textPersonName" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_signup_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_hint"
            android:inputType="phone" />

        <DatePicker
            android:id="@+id/dp_signup_dateofbirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <RadioGroup
            android:id="@+id/rg_signup_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/rb_signup_man"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/man_text" />

            <RadioButton
                android:id="@+id/rb_signup_woman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/woman_text" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/cb_signup_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/terms_of_use_text" />

        <Button
            android:id="@+id/btn_signup_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_btn_text" />

    </LinearLayout>

</ScrollView>